# cmake-example

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  Main.cpp
